--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>Plantilla 1</title>
+    <title>Franco Talarico</title>
     <link rel="stylesheet" type="text/css" href="estilos.css">
     <link rel="stylesheet" type="text/css" href="normalize.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
-
+    <link href="https://fonts.googleapis.com/css2?family=Aboreto&display=swap" rel="stylesheet">
+    
     <meta charset="utf-8">
 </head>
 
@@ -46,8 +46,9 @@
             <div class="container-fluid">
                 <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero-text">
+                    <p class="hero_desc">Hello, I am</p>
                     <h2 class="hero_title">Franco Talarico</h2>
-                    <p class="hero_desc">Hey.</p>
+                    
                 </div>
                 </div>
             </div>
